namespace cpp Baic

struct UserInfo
{
    1:required string ip,
    2:required string user_agent,
    3:required string cookie,
}


